package edu.fiuba.algo3.modelo.entidades;

public class Panel {
}
