@startuml

package Model {

class Balatro {
    - rondas : int
    - puntajeActual : int
    - rondaActual : int
    + Juego(nombreJugador)
    + iniciarJuego()
    + verificarPuntaje()
    + mostrarTienda()
    - iniciarRonda()
}

class Jugador {
    - nombre: string
    - puntaje: int
    - manoActual: Mano
    - comodines: List<Comodin>
    - cartasTarot: List<Tarot>
    - cartasSeleccionadas: List<CartaPoker>
    + Jugador(nombre: string)
    + repartir()
    + jugar(): Jugada
    + descartarCartas()
    + comprarCartas()
    + ordenarCartas()
}

class Tienda {
    - comodinesAComprar: Lista [Comodin]
    - tarotAComprar: Lista [Tarot]
    - cartasAComprar: List[CartaPoker]]
    + mostrarCartas(): cartasAComprar
    + venderCarta(): Comprable
}

class Ronda {
    - PuntajeMinimo
    - DescartesDisponibles
    - JugadasDisponibles
    - PuntajeAcumulado
    + Ronda(jugador: Jugador)
    + iniciarRonda()
    + verificarPuntaje(): Puntaje
}

class Panel {
    + mostrarInformacion(rondaActual: Ronda)
}

Balatro *-- Jugador
Balatro *-- Tienda
Balatro o-- "0..8" Ronda
Balatro *-- Panel
Ronda .up.> Jugador
Panel .left.> Ronda
Panel .right.> Tienda
}
@enduml